1.change implementation 2.spring boot integration test pass 3.TODO spring mvc integration test

--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.4</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
@@ -206,4 +206,5 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build></project>
+    </build>
+</project>
